# APISubscriptionSystem

./: README.md
python-api/: .env.example  Dockerfile  requirements.txt  run.py
python-api/app/: main.py
python-api/app/api/: dependencies.py  routes.py
python-api/app/api/endpoints/: api_keys.py  auth.py  models.py  subscriptions.py  webhooks.py
python-api/app/api/schemas/: api_key.py  auth.py  model.py  subscription.py
python-api/app/core/: config.py  security.py
python-api/app/db/: base.py  init_db.py
python-api/app/models/: user.py
python-api/app/services/: model_service.py  payment_service.py
rust-file-sync/: Cargo.toml  README.md  config.toml
rust-file-sync/src/: cloud.rs  compression.rs  config.rs  encryption.rs  main.rs
